--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,26 +1,26 @@
----
-apiVersion: backstage.io/v1alpha1
-kind: Component
-metadata:
-  name: portal
-  description: Frontend web del portal
-  labels:
-    category: web
-    team: frontend_team
-  annotations:
-    deployment_strategy: canary
-  urls:
-    - url: https://github.com/mi_empresa/portal
-      type: git
-spec:
-  type: frontend
-  lifecycle: production
-  owner: equipo_frontend
-  system: devPortal
-  dependencyOf:
-    - resource:default/portal-private-db
-  providesApis:
-    - portal-private-api
+# ---
+# apiVersion: backstage.io/v1alpha1
+# kind: Component
+# metadata:
+#   name: portal
+#   description: Frontend web del portal
+#   labels:
+#     category: web
+#     team: frontend_team
+#   annotations:
+#     deployment_strategy: canary
+#   urls:
+#     - url: https://github.com/mi_empresa/portal
+#       type: git
+# spec:
+#   type: frontend
+#   lifecycle: production
+#   owner: equipo_frontend
+#   system: devPortal
+#   dependencyOf:
+#     - resource:default/portal-private-db
+#   providesApis:
+#     - portal-private-api
 ---
 apiVersion: backstage.io/v1alpha1
 kind: API
