--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,6 +1,6 @@
 ---
 apiVersion: backstage.io/v1alpha1
-kind: Component
+kind: component
 metadata:
   name: portal
   description: Frontend web del portal
