--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -26,27 +26,29 @@ spec:
   owner: devportal
   system: devportal
   dependencyOf:
-    - resource:default/portal-private-db
-    - resource:default/portal-private-api
+    - resource:default/portal-private-access
+    - resource:default/portal-private-library
   providesApis:
-    - portal-private-api
+    - portal-private-access
+    - portal-private-library
 ---
 apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
-  name: portal-private-api
-  description: API privada del portal
+  name: portal-private-access
+  description: API access service privada del portal 
   labels:
     category: backend
     team: backend_team
   annotations:
     deployment_strategy: blue_green
   urls:
-    - url: https://github.com/mi_empresa/portal-private-api
+    - url: https://github.com/mi_empresa/portal-private-access
       type: git
 spec:
   type: openapi
   lifecycle: production
+  memberOf: devportal-services
   owner: devportal
   system: devportal
   dependencyOf:
@@ -55,15 +57,50 @@ spec:
     openapi: "3.0.0"
     info:
       version: 1.0.0
-      title: Artist API
+      title: access API
       license:
         name: MIT
     servers:
-      - url: http://customers.company.net/v1
+      - url: http://access.company.net/v1
     paths:
-      /customers:
+      /access:
         get:
-          summary: List all customers
+          summary: List all access
+---
+apiVersion: backstage.io/v1alpha1
+kind: API
+metadata:
+  name: portal-private-library
+  description: API library service privada del portal 
+  labels:
+    category: backend
+    team: backend_team
+  annotations:
+    deployment_strategy: blue_green
+  urls:
+    - url: https://github.com/mi_empresa/portal-private-library
+      type: git
+spec:
+  type: openapi
+  lifecycle: production
+  memberOf: devportal-services
+  owner: devportal
+  system: devportal
+  dependencyOf:
+    - resource:default/portal-private-db
+  definition: |
+    openapi: "3.0.0"
+    info:
+      version: 1.0.0
+      title: library API
+      license:
+        name: MIT
+    servers:
+      - url: http://library.company.net/v1
+    paths:
+      /access:
+        get:
+          summary: List all library
 ---
 apiVersion: backstage.io/v1alpha1
 kind: Resource
@@ -81,6 +118,7 @@ metadata:
 spec:
   type: database
   lifecycle: production
+  memberOf: devportal-services
   owner: devportal
   system: devportal
 ---
