--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -20,6 +20,9 @@ metadata:
   urls:
     - url: https://github.com/mi_empresa/portal
       type: git
+relations:
+    - type: ownedBy
+      targetRef: resource:default/portal-private-db
 spec:
   type: frontend
   lifecycle: production
