--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -26,12 +26,46 @@ spec:
   lifecycle: production
   owner: devportal
   system: devportal
-  dependencyOf:
-    - resource:default/portal-private-library
-  dependsOn:
-    - resource:default/portal-private-library
   consumesApis:
+    - portal-private-access
     - portal-private-library
+---
+apiVersion: backstage.io/v1alpha1
+kind: API
+metadata:
+  name: portal-private-access
+  description: API access service privada del portal 
+  labels:
+    category: backend
+    team: backend_team
+  annotations:
+    deployment_strategy: blue_green
+  urls:
+    - url: https://github.com/mi_empresa/portal-private-access
+      type: git
+spec:
+  type: openapi
+  lifecycle: production
+  memberOf: devportal-services
+  owner: devportal
+  system: devportal
+  apiConsumedBy:
+    - portal
+  dependsOn:
+    - resource:default/portal-private-db
+  definition: |
+    openapi: "3.0.0"
+    info:
+      version: 1.0.0
+      title: access API
+      license:
+        name: MIT
+    servers:
+      - url: http://access.company.net/v1
+    paths:
+      /access:
+        get:
+          summary: List all access
 ---
 apiVersion: backstage.io/v1alpha1
 kind: API
@@ -52,6 +86,8 @@ spec:
   memberOf: devportal-services
   owner: devportal
   system: devportal
+  apiConsumedBy:
+    - portal
   dependsOn:
     - resource:default/portal-private-db
   definition: |
@@ -64,7 +100,7 @@ spec:
     servers:
       - url: http://library.company.net/v1
     paths:
-      /library:
+      /access:
         get:
           summary: List all library
 ---
