--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -18,6 +18,9 @@ metadata:
     team: backend_team
   annotations:
     deployment_strategy: canary
+  tags:
+    - backend
+    - devportal
   urls:
     - url: https://github.com/mi_empresa/eventor
       type: git
@@ -42,6 +45,9 @@ metadata:
     team: frontend_team
   annotations:
     deployment_strategy: canary
+  tags:
+    - frontend
+    - devportal
   urls:
     - url: https://github.com/mi_empresa/portal
       type: git
@@ -66,6 +72,10 @@ metadata:
     team: backend_team
   annotations:
     deployment_strategy: blue_green
+  tags:
+    - backend
+    - devportal
+    - api
   urls:
     - url: https://github.com/mi_empresa/portal-private-access
       type: git
@@ -105,6 +115,10 @@ metadata:
     team: backend_team
   annotations:
     deployment_strategy: blue_green
+  tags:
+    - backend
+    - devportal
+    - api
   urls:
     - url: https://github.com/mi_empresa/portal-private-library
       type: git
@@ -144,6 +158,10 @@ metadata:
     team: backend_team
   annotations:
     deployment_strategy: blue_green
+  tags:
+    - backend
+    - devportal
+    - api
   urls:
     - url: https://github.com/mi_empresa/portal-private-details-library
       type: git
@@ -183,6 +201,10 @@ metadata:
     team: backend_team
   annotations:
     deployment_strategy: blue_green
+  tags:
+    - backend
+    - devportal
+    - api
   urls:
     - url: https://github.com/mi_empresa/portal-private-details-terraforms
       type: git
