--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -33,7 +33,8 @@ spec:
   owner: devportal
   system: devportal
   apiConsumedBy: 
-    - portal-private-library
+    - portal-private-access
+    - portal-private-details-library
 ---
 apiVersion: backstage.io/v1alpha1
 kind: Component
@@ -61,6 +62,7 @@ spec:
   system: devportal
   consumesApis: 
     - portal-private-library
+    - portal-private-details-library
 ---
 apiVersion: backstage.io/v1alpha1
 kind: API
@@ -107,6 +109,52 @@ spec:
       /library:
         get:
           summary: List all library
+---
+apiVersion: backstage.io/v1alpha1
+kind: API
+metadata:
+  name: portal-private-details-library
+  description: API details library service privada del portal 
+  labels:
+    category: backend
+    team: backend_team
+  annotations:
+    backstage.io/techdocs-ref: dir:.
+    deployment_strategy: canary
+  tags:
+    - backend
+    - devportal
+    - api
+  urls:
+    - url: https://github.com/codigitoes/catalog-test/blob/main/catalog-info.yaml
+      type: documentation
+    - url: https://github.com/codigitoes/catalog-test/blob/main/catalog-info.yaml
+      type: git
+spec:
+  type: openapi
+  lifecycle: production
+  memberOf: devportal-services
+  owner: devportal
+  system: devportal
+  consumesApis: 
+    - eventor
+  apiConsumedBy: 
+    - portal
+  dependsOn:
+    - portal-private-db
+  definition: |
+    openapi: "3.0.0"
+    info:
+      version: 1.0.0
+      title: library API
+      license:
+        name: MIT
+    servers:
+      - url: http://library.company.net/v1
+    paths:
+      /details/library:
+        get:
+          summary: Details of library
 ---
 apiVersion: backstage.io/v1alpha1
 kind: Resource
