--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -33,8 +33,10 @@ spec:
   owner: devportal
   system: devportal
   apiConsumedBy: 
-    - portal-private-access
+    - portal-private-library
     - portal-private-details-library
+    - portal-private-terraforms
+    - portal-private-details-terraforms
 ---
 apiVersion: backstage.io/v1alpha1
 kind: Component
@@ -63,6 +65,8 @@ spec:
   consumesApis: 
     - portal-private-library
     - portal-private-details-library
+    - portal-private-terraforms
+    - portal-private-details-terraforms
 ---
 apiVersion: backstage.io/v1alpha1
 kind: API
@@ -155,6 +159,98 @@ spec:
       /details/library:
         get:
           summary: Details of library
+---
+apiVersion: backstage.io/v1alpha1
+kind: API
+metadata:
+  name: portal-private-terraforms
+  description: API terraforms service privada del portal 
+  labels:
+    category: backend
+    team: backend_team
+  annotations:
+    backstage.io/techdocs-ref: dir:.
+    deployment_strategy: canary
+  tags:
+    - backend
+    - devportal
+    - api
+  urls:
+    - url: https://github.com/codigitoes/catalog-test/blob/main/catalog-info.yaml
+      type: documentation
+    - url: https://github.com/codigitoes/catalog-test/blob/main/catalog-info.yaml
+      type: git
+spec:
+  type: openapi
+  lifecycle: production
+  memberOf: devportal-services
+  owner: devportal
+  system: devportal
+  consumesApis: 
+    - eventor
+  apiConsumedBy: 
+    - portal
+  dependsOn:
+    - portal-private-db
+  definition: |
+    openapi: "3.0.0"
+    info:
+      version: 1.0.0
+      title: library API
+      license:
+        name: MIT
+    servers:
+      - url: http://terraforms.company.net/v1
+    paths:
+      /terraforms:
+        get:
+          summary: List all terraforms modules
+---
+apiVersion: backstage.io/v1alpha1
+kind: API
+metadata:
+  name: portal-private-details-terraforms
+  description: API details terraforms service privada del portal 
+  labels:
+    category: backend
+    team: backend_team
+  annotations:
+    backstage.io/techdocs-ref: dir:.
+    deployment_strategy: canary
+  tags:
+    - backend
+    - devportal
+    - api
+  urls:
+    - url: https://github.com/codigitoes/catalog-test/blob/main/catalog-info.yaml
+      type: documentation
+    - url: https://github.com/codigitoes/catalog-test/blob/main/catalog-info.yaml
+      type: git
+spec:
+  type: openapi
+  lifecycle: production
+  memberOf: devportal-services
+  owner: devportal
+  system: devportal
+  consumesApis: 
+    - eventor
+  apiConsumedBy: 
+    - portal
+  dependsOn:
+    - portal-private-db
+  definition: |
+    openapi: "3.0.0"
+    info:
+      version: 1.0.0
+      title: terraforms API
+      license:
+        name: MIT
+    servers:
+      - url: http://terraform-details.company.net/v1
+    paths:
+      /details/terraforms:
+        get:
+          summary: Details of terraforms
 ---
 apiVersion: backstage.io/v1alpha1
 kind: Resource
