--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -11,6 +11,37 @@ spec:
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
+  name: eventor
+  description: Event store
+  labels:
+    category: event
+    team: backend_team
+  annotations:
+    backstage.io/techdocs-ref: dir:.
+    deployment_strategy: canary
+  tags:
+    - backend
+    - devportal
+  urls:
+    - url: https://github.com/codigitoes/catalog-test/blob/main/catalog-info.yaml
+      type: documentation
+    - url: https://github.com/codigitoes/catalog-test/blob/main/catalog-info.yaml
+      type: git
+spec:
+  type: backend
+  lifecycle: production
+  owner: devportal
+  system: devportal
+  apiConsumedBy: 
+    - portal-private-access
+    - portal-private-library
+    - portal-private-details-library
+    - portal-private-terraforms
+    - portal-private-details-terraforms
+---
+apiVersion: backstage.io/v1alpha1
+kind: Component
+metadata:
   name: portal
   description: Frontend web del portal
   labels:
@@ -30,6 +61,265 @@ metadata:
 spec:
   type: frontend
   lifecycle: production
+  owner: devportal
+  system: devportal
+  consumesApis: 
+    - portal-private-access
+    - portal-private-library
+    - portal-private-details-library
+    - portal-private-terraforms
+    - portal-private-details-terraforms
+---
+apiVersion: backstage.io/v1alpha1
+kind: API
+metadata:
+  name: portal-private-library
+  description: API library service privada del portal 
+  labels:
+    category: backend
+    team: backend_team
+  annotations:
+    backstage.io/techdocs-ref: dir:.
+    deployment_strategy: canary
+  tags:
+    - backend
+    - devportal
+    - api
+  urls:
+    - url: https://github.com/codigitoes/catalog-test/blob/main/catalog-info.yaml
+      type: documentation
+    - url: https://github.com/codigitoes/catalog-test/blob/main/catalog-info.yaml
+      type: git
+spec:
+  type: openapi
+  lifecycle: production
+  memberOf: devportal-services
+  owner: devportal
+  system: devportal
+  consumesApis: 
+    - eventor
+  apiConsumedBy: 
+    - portal
+  dependsOn:
+    - portal-private-db
+  definition: |
+    openapi: "3.0.0"
+    info:
+      version: 1.0.0
+      title: library API
+      license:
+        name: MIT
+    servers:
+      - url: http://library.company.net/v1
+    paths:
+      /library:
+        get:
+          summary: List all library
+---
+apiVersion: backstage.io/v1alpha1
+kind: API
+metadata:
+  name: portal-private-details-library
+  description: API details library service privada del portal 
+  labels:
+    category: backend
+    team: backend_team
+  annotations:
+    backstage.io/techdocs-ref: dir:.
+    deployment_strategy: canary
+  tags:
+    - backend
+    - devportal
+    - api
+  urls:
+    - url: https://github.com/codigitoes/catalog-test/blob/main/catalog-info.yaml
+      type: documentation
+    - url: https://github.com/codigitoes/catalog-test/blob/main/catalog-info.yaml
+      type: git
+spec:
+  type: openapi
+  lifecycle: production
+  memberOf: devportal-services
+  owner: devportal
+  system: devportal
+  consumesApis: 
+    - eventor
+  apiConsumedBy: 
+    - portal
+  dependsOn:
+    - portal-private-db
+  definition: |
+    openapi: "3.0.0"
+    info:
+      version: 1.0.0
+      title: library API
+      license:
+        name: MIT
+    servers:
+      - url: http://library.company.net/v1
+    paths:
+      /details/library:
+        get:
+          summary: Details of library
+---
+apiVersion: backstage.io/v1alpha1
+kind: API
+metadata:
+  name: portal-private-terraforms
+  description: API terraforms service privada del portal 
+  labels:
+    category: backend
+    team: backend_team
+  annotations:
+    backstage.io/techdocs-ref: dir:.
+    deployment_strategy: canary
+  tags:
+    - backend
+    - devportal
+    - api
+  urls:
+    - url: https://github.com/codigitoes/catalog-test/blob/main/catalog-info.yaml
+      type: documentation
+    - url: https://github.com/codigitoes/catalog-test/blob/main/catalog-info.yaml
+      type: git
+spec:
+  type: openapi
+  lifecycle: production
+  memberOf: devportal-services
+  owner: devportal
+  system: devportal
+  consumesApis: 
+    - eventor
+  apiConsumedBy: 
+    - portal
+  dependsOn:
+    - portal-private-db
+  definition: |
+    openapi: "3.0.0"
+    info:
+      version: 1.0.0
+      title: library API
+      license:
+        name: MIT
+    servers:
+      - url: http://terraforms.company.net/v1
+    paths:
+      /terraforms:
+        get:
+          summary: List all terraforms modules
+---
+apiVersion: backstage.io/v1alpha1
+kind: API
+metadata:
+  name: portal-private-details-terraforms
+  description: API details terraforms service privada del portal 
+  labels:
+    category: backend
+    team: backend_team
+  annotations:
+    backstage.io/techdocs-ref: dir:.
+    deployment_strategy: canary
+  tags:
+    - backend
+    - devportal
+    - api
+  urls:
+    - url: https://github.com/codigitoes/catalog-test/blob/main/catalog-info.yaml
+      type: documentation
+    - url: https://github.com/codigitoes/catalog-test/blob/main/catalog-info.yaml
+      type: git
+spec:
+  type: openapi
+  lifecycle: production
+  memberOf: devportal-services
+  owner: devportal
+  system: devportal
+  consumesApis: 
+    - eventor
+  apiConsumedBy: 
+    - portal
+  dependsOn:
+    - portal-private-db
+  definition: |
+    openapi: "3.0.0"
+    info:
+      version: 1.0.0
+      title: terraforms API
+      license:
+        name: MIT
+    servers:
+      - url: http://terraform-details.company.net/v1
+    paths:
+      /details/terraforms:
+        get:
+          summary: Details of terraforms
+---
+apiVersion: backstage.io/v1alpha1
+kind: API
+metadata:
+  name: portal-private-access
+  description: API access service privada del portal 
+  labels:
+    category: backend
+    team: backend_team
+  annotations:
+    backstage.io/techdocs-ref: dir:.
+    deployment_strategy: canary
+  tags:
+    - backend
+    - devportal
+    - api
+  urls:
+    - url: https://github.com/codigitoes/catalog-test/blob/main/catalog-info.yaml
+      type: documentation
+    - url: https://github.com/codigitoes/catalog-test/blob/main/catalog-info.yaml
+      type: git
+spec:
+  type: openapi
+  lifecycle: production
+  memberOf: devportal-services
+  owner: devportal
+  system: devportal
+  consumesApis: 
+    - eventor
+  apiConsumedBy: 
+    - portal
+  dependsOn:
+    - portal-private-db
+  definition: |
+    openapi: "3.0.0"
+    info:
+      version: 1.0.0
+      title: access API
+      license:
+        name: MIT
+    servers:
+      - url: http://access.company.net/v1
+    paths:
+      /access:
+        get:
+          summary: List all access
+---
+apiVersion: backstage.io/v1alpha1
+kind: Resource
+metadata:
+  name: portal-private-db
+  description: Base de datos exclusiva para el API privado del portal
+  labels:
+    category: database
+    team: db_team
+  annotations:
+    backstage.io/techdocs-ref: dir:.
+    deployment_strategy: canary
+  urls:
+    - url: https://github.com/codigitoes/catalog-test/blob/main/catalog-info.yaml
+      type: documentation
+    - url: https://github.com/codigitoes/catalog-test/blob/main/catalog-info.yaml
+      type: git
+spec:
+  type: database
+  lifecycle: production
+  memberOf: devportal-services
   owner: devportal
   system: devportal
 ---
